<resources>
    <string name="app_name">spliff</string>
    <string name="stay_high">Stay High.</string>
    <string name="stay_happy">Stay Happy.</string>
    <string name="always">Always.</string>
    <string name="join">join</string>
    <string name="log_in">Log In</string>
    <string name="create_your_text">Create your</string>
    <string name="account">account</string>
    <string name="creating_account_terms">By creating an account you agree with our terms and conditions</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_in_bottom">\? Log in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_vapes">Vapes</string>
    <string name="menu_extracts">Extracts</string>
    <string name="log_out">Log Out</string>
    <string name="vapes">Vapes</string>
    <string name="flowers">Flowers</string>
    <string name="demo_email">dukauwa.du@gmail.com</string>
    <string name="mark_the_text">Mark the occassion with these must have products</string>
    <string name="_50_off">50% Off</string>
    <string name="everything">Everything</string>
    <string name="code">with code: sativa 123</string>
    <string name="home">home</string>
    <string name="explore">Explore</string>
    <string name="search_here">Search Here</string>
    <string name="registration_your">Registration your</string>
    <string name="log_in_text">Log in</string>
    <string name="new_user">New user</string>
    <string name="registration">Registration</string>
    <string name="extracts">Extracts</string>
    <string name="accessories">Accessories</string>
    <string name="edibles">Edibles</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="title_activity_add_to_bag">AddToBagActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="product_description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</string>
    <string name="title_activity_your_bag">Your bag</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="continus_shopping_description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</string>
    <string name="payment_sucessful">Payment sucessful</string>

</resources>