<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_explore"
            android:title="@string/explore" />
        <item
            android:id="@+id/nav_extracts"
            android:title="@string/extracts" />
        <item
            android:id="@+id/nav_edibles"
            android:title="@string/edibles" />
        <item
            android:id="@+id/nav_flowers"
            android:title="@string/flowers" />
        <item
            android:id="@+id/nav_accessories"
            android:title="@string/accessories" />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/log_out" />
    </group>

</menu>