<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.itmedicious.spliff.activity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_explore"
        android:name="com.itmedicious.spliff.activity.ui.Explore.ExploreFragment"
        android:label="@string/menu_vapes"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/nav_extracts"
        android:name="com.itmedicious.spliff.activity.ui.Extracts.ExtractsFragment"
        android:label="@string/menu_extracts"
        tools:layout="@layout/fragment_extracts" />
</navigation>